part of 'extended_base_bloc.dart';

final class ExtendedBaseEvent extends CCBaseEvent {
  const ExtendedBaseEvent();
}
